Fixed wrapping with button row

--- a/bogenliga/src/app/modules/spotter/components/interface/interface.component.scss
+++ b/bogenliga/src/app/modules/spotter/components/interface/interface.component.scss
@@ -11,90 +11,108 @@
     border: none;
   }
 
-  @media (max-width: 1200px) {
+  .button-square:focus {
+    background-color: #d69558;
+}
+
+.button-square.old {
+  background-color: #d69558;
+}
+
+.button-square.new {
+  background-color: #8ac679;
+}
+
+.btn-circle {
+  background: #cbcbcb;
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  text-align: center;
+  margin-right: 10px;
+  margin-left: 10px;
+  font-size: 75px;
+  color: #4a4a4a;
+  outline-style: none;
+}
+
+.btn-circle.header {
+  width: 75px;
+  height: 75px;
+  font-size: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.btn-circle.header:focus {
+  border-color: #73e5ef;
+  border-width: 7.5px;
+}
+
+.btn-circle.header.selected {
+  border-color: #73e5ef;
+  border-width: 7.5px;
+}
+
+.btn-circle.current {
+  background-color: #d69558;
+}
+
+.btn-circle.correct {
+  background-color: #d69558;
+}
+
+.btn-circle.unsure {
+  background-color: #dd8583;
+}
+
+
+
+
+
+
+@media (max-width: 1200px) {
     .button-square {
         width: 110px;
         height: 110px;
         margin: 7.5px;
-        font-size: 65px;
+        font-size: 60px;
     }
-  }
+    .btn-circle {
+        width: 125px;
+        height: 125px;
+        font-size: 65px;
+        margin: 7.5px;
+    }
+}
 
-  @media (max-width: 992px) {
+@media (max-width: 992px) {
     .button-square {
         width: 80px;
         height: 80px;
         margin: 5px;
         font-size: 45px;
     }
-  }
-
-  @media (max-width: 768px) {
-      .button-square {
-        width: 80px;
-        height: 80px;
-        margin: 5px;
+    .btn-circle {
+        width: 100px;
+        height: 100px;
         font-size: 45px;
-      }
-
-      #miss {
-          margin-bottom: 25px;
-      }
-  }
-  
-
-
-  .button-square:focus {
-      background-color: #d69558;
-  }
-
-  .button-square.old {
-    background-color: #d69558;
-  }
-
-  .button-square.new {
-    background-color: #8ac679;
-  }
-
-  .btn-circle {
-    background: #cbcbcb;
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    text-align: center;
-    margin-right: 10px;
-    margin-left: 10px;
-    font-size: 75px;
-    color: #4a4a4a;
-    outline-style: none;
+        margin: 5px;
+    }
 }
 
-.btn-circle.header {
-    width: 75px;
-    height: 75px;
-    font-size: 30px;
-    margin-left: 5px;
-    margin-right: 5px;
+@media (max-width: 768px) {
+    .button-square {
+    width: 80px;
+    height: 80px;
+    margin: 5px;
+    font-size: 45px;
+    }
+
+    #miss {
+        margin-bottom: 25px;
+    }
 }
 
-.btn-circle.header:focus {
-    border-color: #73e5ef;
-    border-width: 7.5px;
-}
 
-.btn-circle.header.selected {
-    border-color: #73e5ef;
-    border-width: 7.5px;
-}
 
-.btn-circle.current {
-    background-color: #d69558;
-}
-
-.btn-circle.correct {
-    background-color: #d69558;
-}
-
-.btn-circle.unsure {
-    background-color: #dd8583;
-}
